# substrate-xyk

./: .gitignore
node/: Cargo.toml
node/src/: chain_spec.rs
pallets/template/: Cargo.toml
pallets/template/src/: tests.rs
pallets/xyk/: Cargo.toml
pallets/xyk/src/: lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  template.rs  xyk.rs
src/: chain_spec.rs
