[build-dependencies]
vergen = '3.0.4'

[build-dependencies.build-script-utils]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-build-script-utils'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '2.0.0'

[package]
authors = ['Anonymous']
build = 'build.rs'
edition = '2018'
license = 'Unlicense'
name = 'node-template'
version = '2.0.0'

[[bin]]
name = 'node-template'

[dependencies]
futures = '0.3.1'
log = '0.4.8'
structopt = '0.3.8'

[dependencies.grandpa]
git = 'https://github.com/paritytech/substrate.git'
package = 'sc-finality-grandpa'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '0.8'

[dependencies.grandpa-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-finality-grandpa'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '2.0.0'

[dependencies.node-template-runtime]
path = '../runtime'
version = '2.0.0'

[dependencies.sc-basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'

[dependencies.sc-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '0.8.0'

[dependencies.sc-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '0.8'

[dependencies.sc-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '0.8'

[dependencies.sc-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '0.8'

[dependencies.sc-network]
git = 'https://github.com/paritytech/substrate.git'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '0.8'

[dependencies.sc-service]
git = 'https://github.com/paritytech/substrate.git'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '0.8'

[dependencies.sc-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '2.0.0'

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '0.8'

[dependencies.sp-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '0.8'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '2.0.0'

[dependencies.sp-inherents]
git = 'https://github.com/paritytech/substrate.git'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '2.0.0'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '2.0.0'

[dependencies.sp-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '2.0.0'

[dependencies.generic-asset]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-generic-asset'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '2.0.0'