[package]
authors = ['Anonymous']
edition = '2018'
license = 'Unlicense'
name = 'node-template-runtime'
version = '2.0.0'
[dependencies.aura]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-aura'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '2.0.0'

[dependencies.integer-sqrt]
version = '0.1.3'

[dependencies.balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-balances'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '2.0.0'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.frame-executive]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '2.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '2.0.0'

[dependencies.grandpa]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-grandpa'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '2.0.0'

[dependencies.indices]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-indices'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '2.0.0'

[dependencies.randomness-collective-flip]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-randomness-collective-flip'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '2.0.0'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '2.0.0'

[dependencies.sp-block-builder]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'

[dependencies.sp-consensus-aura]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '0.8'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '2.0.0'

[dependencies.sp-inherents]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '2.0.0'

[dependencies.sp-offchain]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '2.0.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '2.0.0'

[dependencies.sp-session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '2.0.0'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '2.0.0'

[dependencies.sp-transaction-pool]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '2.0.0'

[dependencies.sp-version]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '2.0.0'

[dependencies.sudo]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-sudo'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '2.0.0'

[dependencies.system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '2.0.0'

[dependencies.template]
default-features = false
package = 'pallet-template'
path = '../pallets/template'
version = '2.0.0'

[dependencies.xyk]
default-features = false
package = 'pallet-xyk'
path = '../pallets/xyk'
version = '2.0.0'

[dependencies.timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-timestamp'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '2.0.0'

[dependencies.transaction-payment]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-transaction-payment'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '2.0.0'
[build-dependencies.wasm-builder-runner]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-wasm-builder-runner'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '1.0.4'

[dependencies.generic-asset]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-generic-asset'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '2.0.0'

[features]
default = ['std']
std = [
    'aura/std',
    'balances/std',
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'grandpa/std',
    'indices/std',
    'randomness-collective-flip/std',
    'serde',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-io/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'sudo/std',
    'system/std',
    'timestamp/std',
    'transaction-payment/std',
    'template/std',
    'generic-asset/std',
]
