[package]
authors = ['Block Unison']
edition = '2018'
name = 'pallet-xyk'
version = '2.0.0'

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'safe-mix/std',
    'system/std',
]
[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '2.0.0'

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '2.0.0'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '2.0.0'

[dependencies.safe-mix]
default-features = false
version = '1.0.0'

[dependencies.system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '2.0.0'

[dependencies.generic-asset]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-generic-asset'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '2.0.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3cc0973aff3f5b507c8ed1a13934bd35697b251f'
version = '2.0.0'